--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# FastAPI & Server
+# Web Framework
 fastapi==0.109.0
 uvicorn[standard]==0.27.0
 python-multipart==0.0.6
@@ -12,24 +12,23 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 bcrypt==4.1.2
 
-# Environment & Config
+# Configuration
 python-dotenv==1.0.0
 pydantic==2.5.3
 pydantic-settings==2.1.0
 
-# AI & Machine Learning (Render Compatible)
-torch==2.10.0
-torchvision==0.25.0
-git+https://github.com/openai/CLIP.git
+# AI/ML - Compatible versions for Python 3.11
+torch==2.1.2
+torchvision==0.16.2
 openai==1.10.0
-numpy==1.26.3
-Pillow==11.0.0
+numpy==1.24.3
+Pillow==10.2.0
 
-# AWS & Cloud
+# AWS
 boto3==1.34.34
 botocore==1.34.34
 
-
+# HTTP Clients
 requests==2.31.0
 httpx==0.26.0
 aiohttp==3.9.1
@@ -37,3 +36,8 @@ aiohttp==3.9.1
 # Utilities
 python-dateutil==2.8.2
 pytz==2023.3
+
+# CLIP - Install from GitHub
+ftfy
+regex
+tqdm
