--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ bcrypt==4.1.2
 python-dotenv==1.0.0
 pydantic==2.5.3
 pydantic-settings==2.1.0
+email-validator==2.1.1 
 
 # AI/ML - Compatible versions for Python 3.11
 torch==2.1.2
